@@ -10,6 +10,10 @@ ChangeLog
 	(TODO JenaUtil2.java is a copy of the same file on ontmd -> unify in a libray)
 	
 	
+	- Deprecating MdDispatcher - MD display no longer done here (use ontmd instead)
+	TODO: See if MdHelper can also be deprecated/removed when doing code clean-up
+	
+	
 2008-11-13  0.2.0.beta (20081113)
 	- preliminary tests of unversioned response seem OK
 	  Issue 24, part 2): http://code.google.com/p/mmisw/issues/detail?id=24
